--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -7,7 +7,7 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/bookUpload.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/book/bookUpload.css" asp-append-version="true" />
 }
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
@@ -128,9 +128,8 @@
     </form>
 </section>
 
-
 @section Scripts {
-    <script src="~/js/authors.js"></script>
+    <script src="~/js/book/authors.js"></script>
     <script src="~/lib/tinymce/tinymce.min.js"></script>
     <script>
         tinymce.init({
