--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -9,7 +9,7 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/lib/select2/css/select2.min.css" />
-    <link rel="stylesheet" href="~/css/bookAll.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/book/bookAll.css" asp-append-version="true" />
 }
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
@@ -27,7 +27,11 @@
 
     @if (Model.PagesCount > 1)
     {
-        <vc:pagination controller="Book" action="UserBooks" is-for-books="@false" model="@Model"></vc:pagination>
+        <vc:pagination controller="Book"
+                       action="UserBooks"
+                       is-for-books="@false"
+                       model="@Model">
+        </vc:pagination>
     }
 }
 else
@@ -42,6 +46,6 @@ else
 }
 
 @section Scripts {
-    <script type="module" src="~/js/books.js"></script>
+    <script type="module" src="~/js/book/books.js"></script>
     <script src="~/lib/select2/js/select2.min.js"></script>
 }
