--- a/Web/Bookworm.Web/Views/Identity/Register.cshtml
+++ b/Web/Bookworm.Web/Views/Identity/Register.cshtml
@@ -6,10 +6,10 @@
 }
 
 <div class="loginRegisterContainer my-5">
-    <img src="~/images/register.jpg"
-         class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster"
+    <img src="~/images/identity/register.jpg"
+         class="loginRegisterImg rounded-4 img-fluid"
          alt="Books Image...">
-    <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
+    <div class="loginRegisterForm">
         <form id="account" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
             <h5 class="text-center text-uppercase fs-2">Register</h5>
             <partial name="PartialViews/_CustomDividerPartial" />
