--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Diphylleia&display=swap');
+﻿/*@import url('imports.css');*/
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Diphylleia&display=swap');
 
 :root {
     --clr-white: #fff;
@@ -6,6 +7,8 @@
     --clr-primary: #34495E;
     --clr-secondary: #1abc9c;
     --clr-custom-divider: #2c3e50;
+
+    --nav-minHeight: 100px;
 }
 
 html, body {
@@ -17,16 +20,11 @@ body {
     font-family: 'Diphylleia', serif;
     display: flex;
     flex-direction: column;
-    padding-top: 100px;
+    padding-top: var(--nav-minHeight);
 }
 
 main {
-    margin-left: 2rem;
-    margin-right: 2rem;
-}
-
-.userLayoutNavbar {
-    width: 100% !important;
+    margin: 0 2rem;
 }
 
 .quotesContainer {
@@ -260,42 +258,7 @@ main {
 }
 
 /*Login and Register*/
-.loginRegisterContainer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
 
-    .loginRegisterContainer #account {
-        border: solid 4px black;
-        padding: 2rem;
-        border-radius: 15px;
-        background-color: var(--clr-primary);
-    }
-
-        .loginRegisterContainer #account h5,
-        .loginRegisterContainer #account .rememberMe {
-            color: white;
-        }
-
-        .loginRegisterContainer #account button[type="submit"] {
-            background-color: var(--clr-secondary);
-            border: solid 2px black;
-            padding: 0.4rem 3rem;
-            font-size: 2rem;
-        }
-
-            .loginRegisterContainer #account button[type="submit"]:hover {
-                color: white;
-            }
-
-.loginRegisterForm {
-    flex-basis: 50%;
-}
-
-.loginRegisterImg {
-    height: 30rem;
-}
 
 .bookworm-footer {
     background-color: var(--clr-primary);
@@ -534,18 +497,6 @@ input[type="radio"] {
 
 /*Responsive Design*/
 @media only screen and (max-width: 1000px) {
-    .loginRegisterFormContainer .imageContainer {
-        display: none;
-    }
-
-    .loginRegisterFormContainer {
-        margin: 1rem;
-    }
-
-    .loginRegisterForm {
-        width: 100%;
-    }
-
     .editQuoteContainer .editQuoteForm {
         width: 100%;
     }
@@ -553,19 +504,4 @@ input[type="radio"] {
         .editQuoteContainer .editQuoteForm .editQuoteFormBtnContainer button {
             width: 100%;
         }
-}
-
-@media only screen and (max-width: 950px) {
-    .loginRegisterImg {
-        display: none;
-    }
-
-    .loginRegisterContainer {
-        display: flex;
-        justify-content: center;
-    }
-
-    .loginRegisterForm {
-        flex-basis: 80%;
-    }
 }
