--- a/Web/Bookworm.Web/Views/Book/GeneratedBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/GeneratedBooks.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/bookListing.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/book/bookListing.css" asp-append-version="true" />
 }
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
