--- a/Web/Bookworm.Web/Views/Category/All.cshtml
+++ b/Web/Bookworm.Web/Views/Category/All.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/categories.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/book/categories.css" asp-append-version="true" />
 }
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
@@ -19,7 +19,7 @@
            asp-route-category="@category.Name">
             <div class="imageContainer">
                 <img class="rounded-4"
-                     src="~/images/bookCategories/@(category.Name).jpg"
+                     src="~/images/categories/@(category.Name).jpg"
                      alt=@category.Name
                      height="300">
                 <div class="overlay">
