--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -12,7 +12,11 @@
 
 @if (Model.PagesCount > 1)
 {
-    <vc:pagination controller="Quote" action="UserQuotes" is-for-books="@false" model="@Model"></vc:pagination>
+    <vc:pagination controller="Quote"
+                   action="UserQuotes"
+                   is-for-books="@false"
+                   model="@Model">
+    </vc:pagination>
 }
 
 <div class="modal fade"
@@ -43,5 +47,5 @@
 
 @section Scripts {
     <script src="~/js/modal.js"></script>
-    <script type="module" src="~/js/quotes/allQuotes.js"></script>
+    <script type="module" src="~/js/quote/allQuotes.js"></script>
 }
