--- a/Web/Bookworm.Web/Views/Authentication/Login.cshtml
+++ b/Web/Bookworm.Web/Views/Authentication/Login.cshtml
@@ -58,7 +58,7 @@
                     {
                         <div class="text-center">
                             <button type="submit"
-                                    class="btn btn-lg my-3"
+                                    class="btn btn-lg my-3 @(provider.DisplayName == "Google" ? "googleBtn" : "")"
                                     name="provider"
                                     value="@provider.Name"
                                     title="Log in using your @provider.DisplayName account">
