--- a/Web/Bookworm.Web/Views/Identity/ResendEmailConfirmation.cshtml
+++ b/Web/Bookworm.Web/Views/Identity/ResendEmailConfirmation.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "Resend email confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="@Model.Email" class="form-control" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="@Model.Email" class="form-label"></label>
-                <span asp-validation-for="@Model.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
-        </form>
-    </div>
-</div>
+@section Styles {
+    <link rel="stylesheet" href="~/css/identity/resendEmailConfirmation.css" />
+}
+
+<section class="resendEmailConfirmSection">
+    <form method="post">
+        <h2 class="text-center text-white">@ViewData["Title"]</h2>
+        <div asp-validation-summary="All" class="text-danger" role="alert"></div>
+        <div class="form-floating mb-3">
+            <input asp-for="@Model.Email" class="form-control" aria-required="true" placeholder="name@example.com" />
+            <label asp-for="@Model.Email" class="form-label"></label>
+            <span asp-validation-for="@Model.Email" class="text-danger"></span>
+        </div>
+        <button type="submit" class="w-100 btn btn-lg">Resend</button>
+    </form>
+</section>
