--- a/Web/Bookworm.Web/wwwroot/css/identity/loginRegister.css
+++ b/Web/Bookworm.Web/wwwroot/css/identity/loginRegister.css
@@ -42,8 +42,16 @@
             color: white;
         }
 
-@media only screen and (max-width: 1000px) {
-    .loginRegisterContainer .imgContainer {
+    .loginRegisterContainer #external-account .googleBtn {
+        background-color: white;
+    }
+
+        .loginRegisterContainer #external-account .googleBtn:hover {
+            color: black;
+        }
+
+        @media only screen and (max-width: 1000px) {
+            .loginRegisterContainer .imgContainer {
         display: none;
     }
 
