Add change password page

--- a/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
+++ b/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
@@ -1,1 +1,33 @@
-﻿<h1>Change your password!</h1>
+﻿@model ChangePasswordInputModel
+
+<section class="changePassSection">
+    <form method="post">
+        <h2 class="text-center text-white mb-3">Change your password</h2>
+        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+        <div class="form-floating mb-3">
+            <input asp-for="@Model.OldPassword"
+                   class="form-control"
+                   aria-required="true"
+                   placeholder="Please enter your old password." />
+            <label asp-for="@Model.OldPassword" class="form-label"></label>
+            <span asp-validation-for="@Model.OldPassword" class="text-danger"></span>
+        </div>
+        <div class="form-floating mb-3">
+            <input asp-for="@Model.NewPassword"
+                   class="form-control"
+                   aria-required="true"
+                   placeholder="Please enter your new password." />
+            <label asp-for="@Model.NewPassword" class="form-label"></label>
+            <span asp-validation-for="@Model.NewPassword" class="text-danger"></span>
+        </div>
+        <div class="form-floating mb-3">
+            <input asp-for="@Model.ConfirmPassword"
+                   class="form-control"
+                   aria-required="true"
+                   placeholder="Please confirm your new password." />
+            <label asp-for="@Model.ConfirmPassword" class="form-label"></label>
+            <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
+        </div>
+        <button type="submit" class="w-100 btn btn-lg">Update password</button>
+    </form>
+</section>
