--- a/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
@@ -3,18 +3,10 @@
 }
 
 @section Styles {
-    <style>
-        main {
-            margin: 0 !important;
-        }
-
-        .accountLayoutNavbar {
-            width: 100% !important;
-        }
-    </style>
+    <link rel="stylesheet" href="~/css/identity/accountLayout.css"/>
 }
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary accountLayoutNavbar">
+<nav class="navbar navbar-expand-lg accountLayoutNavbar">
     <div class="container-fluid">
         <a class="navbar-brand"
            asp-area="Account"
