--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -9,6 +9,7 @@
     --clr-custom-divider: #2c3e50;
 
     --nav-minHeight: 100px;
+    --footer-minHeight: 100px;
 }
 
 html, body {
@@ -108,7 +109,7 @@ main {
 /*Navbar*/
 .mainLayoutNavbar {
     background-color: var(--clr-primary);
-    min-height: 100px;
+    min-height: var(--nav-minHeight);
     font-size: 1.5rem;
     border-bottom: solid 2px var(--clr-secondary);
 }
@@ -257,9 +258,6 @@ main {
     border-radius: 10px;
 }
 
-/*Login and Register*/
-
-
 .bookworm-footer {
     background-color: var(--clr-primary);
     margin-top: auto;
@@ -271,7 +269,7 @@ main {
     color: var(--clr-white);
     padding: 2rem 0;
     font-size: 1.5rem;
-    min-height: 100px;
+    min-height: var(--footer-minHeight);
 }
 
 .category-link {
