Add change username page

--- a/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
+++ b/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChangePasswordInputModel
 
-<section class="changePassSection">
+<section class="accountLayoutSection">
     <form method="post">
         <h3 class="text-center text-white mb-3">Change your password</h3>
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
