--- a/Web/Bookworm.Web/Areas/Account/Views/Manage/SetPassword.cshtml
+++ b/Web/Bookworm.Web/Areas/Account/Views/Manage/SetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SetPasswordInputModel
 
-<section class="setPassSection">
+<section class="accountLayoutSection">
     <form method="post">
         <h3 class="text-white text-center">Set your password</h3>
         <div class="mb-3">
