--- a/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
@@ -30,6 +30,15 @@
                        aria-current="page"
                        asp-area="Account"
                        asp-controller="Manage"
+                       asp-action="ChangeUsername">
+                        Change Username
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active"
+                       aria-current="page"
+                       asp-area="Account"
+                       asp-controller="Manage"
                        asp-action="ChangePassword">
                         Change Password
                     </a>
