--- a/Web/Bookworm.Web/wwwroot/css/identity/accountLayout.css
+++ b/Web/Bookworm.Web/wwwroot/css/identity/accountLayout.css
@@ -9,8 +9,7 @@
     min-height: 60px;
 }
 
-/*Change Password*/
-.changePassSection {
+.accountLayoutSection {
     min-height: calc(100vh - (var(--nav-minHeight) + var(--footer-minHeight) + 63px));
     display: flex;
     justify-content: center;
@@ -18,7 +17,7 @@
     padding: 2rem 0;
 }
 
-    .changePassSection form {
+    .accountLayoutSection form {
         border: solid 2px var(--clr-secondary);
         background-color: var(--clr-primary);
         padding: 2rem;
@@ -26,53 +25,17 @@
         border-radius: 15px;
     }
 
-        .changePassSection form input {
+        .accountLayoutSection form input {
             border: solid 2px var(--clr-secondary);
             font-size: 1.3rem;
         }
 
-        .changePassSection form button,
-        .changePassSection form button:hover,
-        .changePassSection form button:active {
+        .accountLayoutSection form button,
+        .accountLayoutSection form button:hover,
+        .accountLayoutSection form button:active {
             background-color: var(--clr-secondary) !important;
         }
 
-            .changePassSection form button:hover {
-                color: var(--clr-white);
-            }
-
-/*Set Password*/
-.setPassSection {
-    min-height: calc(100vh - (var(--nav-minHeight) + var(--footer-minHeight) + 63px));
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 0;
-}
-
-    .setPassSection form {
-        border: solid 2px var(--clr-secondary);
-        background-color: var(--clr-primary);
-        padding: 2rem;
-        width: 50%;
-        border-radius: 15px;
-    }
-
-        .setPassSection form input {
-            border: solid 2px var(--clr-secondary);
-            font-size: 1.3rem;
-        }
-
-        .setPassSection form p {
-            margin-bottom: 0 !important;
-        }
-
-        .setPassSection form button,
-        .setPassSection form button:hover,
-        .setPassSection form button:active {
-            background-color: var(--clr-secondary) !important;
-        }
-
-            .setPassSection form button:hover {
+            .accountLayoutSection form button:hover {
                 color: var(--clr-white);
             }
