--- a/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangeUsername.cshtml
+++ b/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangeUsername.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ChangeUsernameInputModel
 
+@{
+    this.Layout = "_AccountLayout";
+}
+
 <section class="accountLayoutSection">
     <form method="post">
         <h3 class="text-center text-white mb-3">Change your username</h3>
