--- a/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
@@ -43,6 +43,15 @@
                         Change Password
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active"
+                       aria-current="page"
+                       asp-area="Account"
+                       asp-controller="Manage"
+                       asp-action="ChangeEmail">
+                        Change Email
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
