--- a/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
+++ b/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ChangePasswordInputModel
 
+@{
+    this.Layout = "_AccountLayout";
+}
+
 <section class="accountLayoutSection">
     <form method="post">
         <h3 class="text-center text-white mb-3">Change your password</h3>
