--- a/Web/Bookworm.Web/Areas/Account/Views/Manage/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Account/Views/Manage/Index.cshtml
@@ -1,1 +1,5 @@
-﻿<h1 class="text-center">Manage your account</h1>
+﻿@{
+    this.Layout = "_AccountLayout";
+}
+
+<h1 class="text-center">Manage your account</h1>
